<?xml version="1.0"?>
<package>
  <name>provider_hydrophone</name>
  <version>2.0.2</version>
  <description>
    The provider_hydrophone is responsible to get data from hydrophone
  </description>

  <author>Marc-Antoine Couture</author>

  <maintainer email="francisalonzo29@gmail.com">Francis Alonzo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>sonia_common</run_depend>
</package>
