<?xml version="1.0"?>
<package>
  <name>provider_hydrophone</name>
  <version>2.0.3</version>
  <description>
    The provider_hydrophone is responsible to get data from hydrophone
  </description>

  <author>Marc-Antoine Couture</author>

  <maintainer email="francisalonzo29@gmail.com">Francis Alonzo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sonia_common</run_depend>
</package>
