<?xml version="1.0"?>
<package>
  <name>provider_hydrophone</name>
  <version>2.1.0</version>
  <description>
    The provider_hydrophone is responsible to get data from hydrophone
  </description>

  <author>Francis Alonzo</author>
  <maintainer email="francisalonzo29@gmail.com">Francis Alonzo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sonia_common</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sonia_common</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
